@@ -60,14 +60,14 @@
             "JSON" : "2",
             "List::Util" : "0",
             "Test::DZil" : "0",
-            "Test::More" : "0.88"
+            "Test::More" : "0.96"
          }
       }
    },
    "provides" : {
       "Dist::Zilla::Plugin::RemovePhasedPrereqs" : {
          "file" : "lib/Dist/Zilla/Plugin/RemovePhasedPrereqs.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
@@ -82,6 +82,6 @@
          "web" : "https://github.com/dagolden/dist-zilla-plugin-removephasedprereqs"
       }
    },
-   "version" : "0.001"
+   "version" : "0.002"
 }
 
