@@ -6,7 +6,7 @@ Dist::Zilla::Plugin::RemovePhasedPrereqs - Remove gathered prereqs from particul
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
